Overview of changes from 1.0.x to 1.1.0
==
* New features
  o Main features
    - icon support for toolbar (Etsushi, YamaKen)
    - menu-based quick IM switching from toolbar (YamaKen, Etsushi)

  o IM related
    - Anthy, Canna, Mana
      - circular Hiragana, Katakana, Hankaku-kana conversion with
	"Muhenkan" key (Shun-ichi TAHARA)
    - Mana
      - support conversion-result learning with mana-0.2.0 (Shun-ichi
        TAHARA, Masanari)

* Fixes
  o Minor
    - general
      - handle 'Kanji' and 'Hiragana_Katakana' keys (Shun-ichi TAHARA)

    - uim-dict-gtk
      - refresh the word list when removing and updating the existing
        items (Etsushi)
    - uim-im-switcher-gtk
      - respond to the cursor movement from keyboard (Etsushi)
    - uim-pref-gtk
      - handle <Meta>, <Super>, and <Hyper> modifiers in the key
	capture widget (Etsushi)
      - distinguish directories and regular files on pathname custom
	widget (Etsushi, YamaKen)
    - uim-pref-qt
      - distinguish directories and regular files on pathname custom
	widget (Etsushi, YamaKen)

    - GTK+ immodule
      - enable <Alt>, <Meta>, <Super>, and <Hyper> modifier key
	handling on X11 (bug #2468, Etsushi)
      - disuse key snooper to improve shortcut key handling (Etsushi)
    - uim-xim
      - fix event handling with flashplayer plugin (Etsushi)
    - uim-fep
      - fix "commit_string" handling and make uim-input-ja working
        again (Konosuke, Masanari)
    - uim.el
      - handle "commit_string" from helper programs and make
        uim-input-ja working (Konosuke)

* Others
  - improve code properness with -Werror flag

  - contributed and new input method icons (SHIMODA Hiroshi, FUJITA
    Yuji, Jae-hyeon, YamaKen)

  - new icons for input state indicator in the toolbar (YamaKen,
    Jae-hyeon)

  - strip IM name multiplexed in iconic-label of input modes of skk and
    tutcode that confuses users (YamaKen)

  - update translations
    - ja (Daichi Kawahata, YamaKen)